force-app/main/default/objects/Account/fields/Email_Finances__c.field-meta.xml
<CustomField>
    <fullName>Email_Finances__c</fullName>
    <inlineHelpText>Email du destinataire de la notification de paiement Ebury</inlineHelpText>
    <label>Email Finances</label>
    <type>Email</type>
</CustomField>