force-app/main/default/objects/Account/fields/Erreur_sync__c.field-meta.xml
<CustomField>
    <fullName>Erreur_sync__c</fullName>
    <label>Erreur de synchronisation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>