force-app/main/default/objects/Account/fields/Id_prestataire_Ebury__c.field-meta.xml
<CustomField>
    <fullName>Id_prestataire_Ebury__c</fullName>
    <label>Id prestataire Ebury</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>