force-app/main/default/objects/Account/fields/Modalites_paiement__c.field-meta.xml
<CustomField>
    <fullName>Modalites_paiement__c</fullName>
    <inlineHelpText>Echéance de paiement en jours</inlineHelpText>
    <label>Modalités de paiement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>