force-app/main/default/objects/Account/fields/Multi_devises__c.field-meta.xml
<CustomField>
    <fullName>Multi_devises__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs qui permet le contrôle de la facture.</description>
    <label>Multi-devises</label>
    <type>Checkbox</type>
</CustomField>