force-app/main/default/objects/Account/fields/Nom_usage__c.field-meta.xml
<CustomField>
    <fullName>Nom_usage__c</fullName>
    <label>Nom d’usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>