force-app/main/default/objects/Account/fields/Prestataire_sous_surveillance__c.field-meta.xml
<CustomField>
    <fullName>Prestataire_sous_surveillance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestataire sous surveillance</label>
    <type>Checkbox</type>
</CustomField>