force-app/main/default/objects/Account/fields/Seuil_controle__c.field-meta.xml
<CustomField>
    <fullName>Seuil_controle__c</fullName>
    <description>Champs Qui permet le contrôle de la facture</description>
    <label>Seuil de contrôle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>