force-app/main/default/objects/Account/fields/Statut_synchronisation__c.field-meta.xml
<CustomField>
    <fullName>Statut_synchronisation__c</fullName>
    <label>Statut de synchronisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>A synchroniser</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Synchronisé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>