force-app/main/default/objects/Account/fields/TECH_AccRecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>TECH_AccRecordTypeDevName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>TECH_AccRecordTypeDevName</label>
    <type>Text</type>
</CustomField>