force-app/main/default/objects/Account/recordTypes/grand_compte.recordType-meta.xml
<RecordType>
    <fullName>grand_compte</fullName>
    <active>true</active>
    <label>Grand compte</label>
</RecordType>