force-app/main/default/objects/Account/recordTypes/prestataire_de_sante.recordType-meta.xml
<RecordType>
    <fullName>prestataire_de_sante</fullName>
    <active>true</active>
    <label>Prestataire de santé</label>
</RecordType>