force-app/main/default/objects/Account/recordTypes/prestataire_logistique.recordType-meta.xml
<RecordType>
    <fullName>prestataire_logistique</fullName>
    <active>true</active>
    <label>Prestataire logistique</label>
</RecordType>